--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,13 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Source+Code+Pro:300');
 body {
+  background-color: #232323;
   font-family: "Open Sans Condensed";
+  color: #ffffff;
 }
 code, pre {
   font-family: "Source Code Pro";
-}
-.1 {
-  width: 8.33333333%;
-}
-.2 {
-  width: 16.66666666%;
 }
