--- a/Styles/main.css
+++ b/Styles/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Source+Code+Pro:300');
 body {
-  background-color: #232323;
+  background-color: #000;
   font-family: "Open Sans Condensed";
-  color: #ffffff;
+  color: #fff;
 }
 code, pre {
   font-family: "Source Code Pro";
